Add grpc connection with Transaction
