# docs/swagger.json
@@ -48,9 +48,9 @@
                 }
             }
         },
-        "/getHasBookUsers": {
-            "get": {
-                "description": "Get not Returned books for user",
+        "/balance": {
+            "post": {
+                "description": "Increment Balance",
                 "consumes": [
                     "application/json"
                 ],
@@ -58,18 +58,83 @@
                     "application/json"
                 ],
                 "tags": [
-                    "borrow"
+                    "transaction"
                 ],
-                "summary": "Get not Returned books for user",
-                "operationId": "Get not Returned books",
+                "summary": "Increment Balance",
+                "operationId": "IncrementBalance",
+                "parameters": [
+                    {
+                        "description": "Входящие данные",
+                        "name": "rq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.IncrementBalanceReq"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.UserBorrow"
-                            }
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/book": {
+            "get": {
+                "description": "Get all Book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "book"
+                ],
+                "summary": "Get all Book",
+                "operationId": "GetAllBook",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create Book",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "book"
+                ],
+                "summary": "Create Book",
+                "operationId": "CreateBook",
+                "parameters": [
+                    {
+                        "description": "Входящие данные",
+                        "name": "rq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.BookReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -96,6 +161,60 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/model.UserBorrow"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getNotReturned": {
+            "get": {
+                "description": "Get not Returned books for user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "borrow"
+                ],
+                "summary": "Get not Returned books for user",
+                "operationId": "Get not Returned books",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.UserBorrow"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/getNotReturnedSum": {
+            "get": {
+                "description": "Get not Returned books with sum",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "borrow"
+                ],
+                "summary": "Get not Returned books with sum",
+                "operationId": "Get not Returned books wtih sum",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.CurrentBooks"
                             }
                         }
                     }
@@ -142,11 +261,6 @@
                 }
             },
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "description": "Cancel Transaction",
                 "consumes": [
                     "application/json"
@@ -226,7 +340,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserCreateReq"
                         }
                     }
                 ],
@@ -310,6 +424,42 @@
                 }
             }
         },
+        "model.BookReq": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CurrentBooks": {
+            "type": "object",
+            "properties": {
+                "book": {
+                    "$ref": "#/definitions/model.Book"
+                },
+                "sum": {
+                    "type": "number"
+                }
+            }
+        },
+        "model.IncrementBalanceReq": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.PasswordReq": {
             "type": "object",
             "properties": {
@@ -351,6 +501,9 @@
                     "type": "number"
                 },
                 "book_id": {
+                    "type": "integer"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
@@ -395,6 +548,26 @@
                 },
                 "user": {
                     "$ref": "#/definitions/model.User"
+                }
+            }
+        },
+        "model.UserCreateReq": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
