# internal/model/user_borrow.go
@@ -4,3 +4,8 @@ type UserBorrow struct {
 	User  User
 	Books []Book
 }
+
+type CurrentBooks struct {
+	Book Book
+	Sum  float32
+}
